# project

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md  rustfmt.toml
.git_hooks/: pre-commit  pre-push
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
examples/: cli.rs  directory.rs  local.rs  remote.rs  template.rs  tf_estimator.rs
src/: authors.rs  cli.rs  engine.rs  error.rs  git.rs  info.rs  lib.rs  main.rs  render.rs  substitution.rs  template.rs  util.rs
src/engine/: handlebars.rs
src/template/: config.rs  engine.rs  git.rs  guidon.rs  helpers.rs  parser.rs
src/template/engine/: handlebars.rs  liquid.rs  regex.rs
