[package]
name = "lotlinx"
version = "0.1.0"
authors = ["Victor I. Afolabi <vafolabi@lotlinx.com>"]
edition = "2018"
description = "Lotlinx command line utility"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/victor-iyi/lotlinx"
repository = "https://github.com/victor-iyi/lotlinx"
keywords = ["lotlinx", "lotlinx-cli"]
categories = ["command-line-utilities"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lotlinx"
path = "src/lib.rs"

[[bin]]
name = "lotlinx"
path = "src/main.rs"

[[example]]
name = "tf_estimator"
path = "examples/tf_estimator.rs"

[dependencies]
handlebars = "3.5"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.3"
log = "0.4"
toml = "0.5"
url = "2.2.0"
clap = { version = "2.33", optional = true }
git2 = { version = "0.13", optional = true }
derive_builder = { version = "0.9.0", optional = true }

[dev-dependencies]
env_logger = "0.8"
pretty_assertions = "0.6"

[features]
default = ["cli", "git"]
# Use the command line feature.
cli = ["clap"]
# Initialize a project from a git repo.
git = ["git2", "derive_builder"]