[package]
name = "project"
version = "0.1.0"
authors = ["Victor I. Afolabi <javafolabi@gmail.com"]
edition = "2018"
description = "Create a new project from existing project/template."
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/victor-iyi/project"
repository = "https://github.com/victor-iyi/project"
keywords = ["project", "template", "project-cli"]
categories = ["command-line-utilities"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "project"
path = "src/lib.rs"

[[bin]]
name = "project"
path = "src/main.rs"

[[example]]
name = "tf_estimator"
path = "examples/tf_estimator.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
cargo = "0.50"
regex = "1.4"
walkdir = "2.3"
log = "0.4"
toml = "0.5"
url = "2.2.0"
heck = "0.3"
handlebars = { version = "3.5", optional = true }
clap = { version = "2.33", optional = true }
git2 = { version = "0.13", optional = true }
derive_builder = { version = "0.9.0", optional = true }

[dev-dependencies]
env_logger = "0.8"
pretty_assertions = "0.6"

[features]
default = ["liquid", "cli", "git"]
# Use the liquid templating engine.
liquid = []
# Use the handlebars templating engine.
hbs = ["handlebars"]
# Use the command line feature.
cli = ["clap"]
# Initialize a project from a git repo.
git = ["git2", "derive_builder"]