[package]
name = "project"
version = "0.1.0"
authors = ["Victor I. Afolabi <javafolabi@gmail.com"]
edition = "2018"
description = "Create a new project from existing project/template."
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/victor-iyi/project"
repository = "https://github.com/victor-iyi/project"
keywords = ["project", "template", "project-cli"]
categories = ["command-line-utilities"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "project"
path = "src/lib.rs"

[[bin]]
name = "project"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
cargo = "0.50"
regex = "1.4"
walkdir = "2.3"
log = "0.4"
console = "0.14"
toml = "0.5"
url = "2.2.0"
heck = "0.3"
tempfile = "3.2"
handlebars = "3.5"
liquid = "0.21"
clap = "2.33"
git2 = "0.13"

[dev-dependencies]
env_logger = "0.8"
pretty_assertions = "0.6"
